[package]
name = "builder"
version = "0.1.0"
authors = ["hehaowen00"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro2 = { version = "1.0.24" }
quote = { version = "1.0.8" }
syn = { version = "1.0.60", features = ["extra-traits"]}

